# ros2-demo-robot

./: README.md  install_requirements.sh
src/behavior/: CMakeLists.txt  bt_main.xml  groot2.btproj  package.xml
src/behavior/behavior_trees/: bt_node_a.xml  bt_node_b.xml  highlevel.xml
src/behavior/src/: behavior_node.cpp
src/behavior/src/test_nodes/: node_a.cpp  node_b.cpp
src/description/: CMakeLists.txt  package.xml
src/description/launch/: display.launch.xml  gazebo_sim.launch.xml
src/description/urdf/: robot.urdf.xacro
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: main_robot.launch.xml
src/sensors/usb_camera/: CMakeLists.txt  package.xml
src/sensors/usb_camera/src/: usb_camera_node.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: gazebo_sim.launch.xml  gazevo_sim.launch.py
